<resources>
    <string name="app_name">GankIO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_home">最新</string>
    <string name="action_category">分类</string>
    <string name="action_meizi">福利</string>
    <string name="action_history">历史</string>
    <string name="action_settings">设置</string>
    <string name="action_aboutme">关于</string>

    <!-- Setting -->
    <string name="pref_clear_cache_title">清除缓存</string>
    <string name="pref_check_update_title">手动检查更新</string>

    <string name="title_activity_setting">设置</string>
    <string name="title_activity_about">关于</string>
    <string name="xiaomi_attention">
        <![CDATA[小米系统用户请进入系统应用:安全中心->授权管理->自启动应用管理 后允许『贝壳单词』自启动，否则无法自启动]]></string>
    <string name="toast_close">当前为关闭。\n开启后会在你使用其他 APP
        的时，定时弹出可爱的小『吐司』，不会妨碍你的触摸和点击事件，打扰性非常低，但却能很高效地无压力复习单词。
    </string>
    <string name="toast_open">当前为开启。\n开启后会在你使用其他 APP
        的时，定时弹出可爱的小『吐司』，不会妨碍你的触摸和点击事件，打扰性非常低，但却能很高效地无压力复习单词。
    </string>

    <!-- About -->
    <string name="about_me_git">联系我：@skyofthinking</string>
    <string name="about_me_blog">博客：http://www.jiangyh.com</string>

    <!-- Login -->
    <string name="login_userid_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_btn_txt">登录</string>
    <string name="login_forgot_password">忘记密码？</string>
    <string name="login_register">注册</string>
    <string name="login_loading">正在登录</string>
</resources>
